--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ static def findNodeModules(baseDir) {
     }
     basePath = basePath.getParent()
   }
-  throw new GradleException("VisionCamera: Failed to find node_modules/ path!")
+  throw new GradleException("react-native-simple-img-crop: Failed to find node_modules/ path!")
 }
 static def findNodeModulePath(baseDir, packageName) {
   def basePath = baseDir.toPath().normalize()
@@ -33,7 +33,7 @@ def isNewArchitectureEnabled() {
 }
 
 def nodeModules = findNodeModules(projectDir)
-logger.warn("VisionCamera: node_modules/ found at: ${nodeModules}")
+logger.warn("react-native-simple-img-crop: node_modules/ found at: ${nodeModules}")
 def reactNative = new File("$nodeModules/react-native")
 def CMAKE_NODE_MODULES_DIR = project.getProjectDir().getParentFile().getParent()
 def reactProperties = new Properties()
