--- a/example/package.json
+++ b/example/package.json
@@ -19,8 +19,10 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
-    "metro-react-native-babel-preset": "0.76.8",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "babel-plugin-module-resolver": "^5.0.0",
+    "detox": "^20.11.3",
+    "jest": "^29",
+    "metro-react-native-babel-preset": "0.76.8"
   },
   "engines": {
     "node": ">=16"
